<?xml version="1.0" encoding="UTF-8"?>
<!--

    SPDX-License-Identifier: MIT
    See LICENSE file for details.

    Copyright 2010-2026 The Waffle Project Contributors: https://github.com/Waffle/waffle/graphs/contributors

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.waffle</groupId>
        <artifactId>waffle</artifactId>
        <version>3.6.1-SNAPSHOT</version>
    </parent>

    <groupId>com.github.waffle</groupId>
    <artifactId>waffle-tomcat11</artifactId>
    <version>3.6.1-SNAPSHOT</version>

    <name>waffle-tomcat11</name>
    <description>Tomcat 11 integration for WAFFLE</description>
    <url>https://waffle.github.io/waffle/</url>

    <scm>
        <connection>scm:git:ssh://git@github.com/waffle/waffle.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/waffle/waffle.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/Waffle/waffle</url>
    </scm>

    <properties>
        <!-- Dependencies -->
        <tomcat.version>11.0.22</tomcat.version>

        <!-- Maven compiler options -->
        <java.version>17</java.version>
        <java.release.version>17</java.release.version>

        <!-- Automatic Module Name for JPMS -->
        <module.name>waffle.tomcat11</module.name>
    </properties>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>waffle-jna-jakarta</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>waffle-tests-jakarta</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-catalina</artifactId>
            <version>${tomcat.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <configuration>
                        <rules>
                            <enforceBytecodeVersion>
                                <excludes>
                                    <!-- Openssl contains panama for jdk 22 or higher if enabled via listener 'org.apache.catalina.core.OpenSSLLifecycleListener' -->
                                    <exclude>org.apache.tomcat:tomcat-coyote-ffm</exclude>
                                </excludes>
                            </enforceBytecodeVersion>
                        </rules>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
